Social media Fix

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@ https://templatemo.com/tm-531-reflux
           <div class="social-network">
             <ul class="soial-icons">
               <li>
-                <a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/krishnendu.roy.501598/" target="_blank"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/Krishne99697898" target="_blank"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/krishnendu-roy-577251168/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/krishnendu_roy52/" target="_blank"><i class="fa fa-instagram"></i></a>
               </li>
               <!-- <li>
                 <a href="#"><i class="fa fa-rss"></i></a>
@@ -66,7 +66,7 @@ https://templatemo.com/tm-531-reflux
             </ul>
           </div>
           <div class="copyright-text">
-            <p>Copyright 2019 Reflux Design</p>
+            <p>Copyright 2021 &copy; Krishnendu Roy</p>
           </div>
         </div>
       </div>
@@ -84,12 +84,12 @@ https://templatemo.com/tm-531-reflux
           <div class="row">
             <div class="col-md-6">
               <div class="left-image">
-                <img src="assets/images/left-image.jpg" alt="" />
+                <img src="assets/images/meghnad-saha-institute.png" alt="meghnad saha institute of Technology" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="right-text">
-                <h4>Reflux HTML CSS Template</h4>
+                <h4>Meghnad Saha institue Of Technology</h4>
                 <p>
                   Donec tristique feugiat lacus, at sollicitudin nunc euismod
                   sed. Mauris viverra, erat non sagittis gravida, elit dui
@@ -108,7 +108,7 @@ https://templatemo.com/tm-531-reflux
           <div class="row">
             <div class="col-md-6">
               <div class="left-text">
-                <h4>Sed sagittis rhoncus velit</h4>
+                <h4>Kalyani Shikshayatan (H.S)</h4>
                 <p>
                   Pellentesque habitant morbi tristique senectus et netus et
                   malesuada fames ac turpis egestas. Vestibulum fermentum
@@ -123,7 +123,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="col-md-6">
               <div class="right-image">
-                <img src="assets/images/right-image.jpg" alt="" />
+                <img src="assets/images/shikshayatan.png" alt="" />
               </div>
             </div>
           </div>
