--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Krishnendu Roy portfolio" />
+  <meta name="author" content="krishnendu roy" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
   <title>Krishnendu Roy</title>
   <!--
-Reflux Template
-https://templatemo.com/tm-531-reflux
+Krishnendu Roy
 -->
-  <!-- Bootstrap core CSS -->
+  <!-- Bootstrap CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Additional CSS Files -->
+  <!-- Additional Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css" />
   <link rel="stylesheet" href="assets/css/templatemo-style.css" />
   <link rel="stylesheet" href="assets/css/owl.css" />
@@ -35,8 +34,8 @@ https://templatemo.com/tm-531-reflux
             <a href="#"><img src="assets/images/pic.jpeg" alt="Pofile pic" /></a>
           </div>
           <div class="author-content">
-            <h4>Krishnendu Roy</h4>
-            <span>CSE Student</span>
+            <h4><strong>Krishnendu Roy</strong></h4>
+            <span><em>CSE Student</em></span>
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
@@ -77,8 +76,7 @@ https://templatemo.com/tm-531-reflux
         <div class="section-heading">
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span>Hello! I am krishnendu roy, I live in kalyani. I have completed my schooling from Kalyani Shikshayatan
-            (H.S). And Now doing B.tech in CSE from Meghnad saha institue of Technology. </span>
+          <span>Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engnieering Student(2nd Year)<br>Here is EDUCATIONAL QUALIFICATION..</span>
         </div>
         <div class="left-image-post">
           <div class="row">
@@ -91,14 +89,14 @@ https://templatemo.com/tm-531-reflux
               <div class="right-text">
                 <h4>Meghnad Saha institue Of Technology</h4>
                 <p>
-                  Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                  sed. Mauris viverra, erat non sagittis gravida, elit dui
-                  mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                  tincidunt quam vitae neque pharetra dignissim eget ut
-                  libero.
+                  B.tech 2nd Year Computer Science and Engnieering Student.
+                  <br>
+                  Year &#8594; 2020 - 2024 
+                  <br>
+                  current sgpa &#8594; 9.7
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="https://msit.edu.in/" target="_blank">College Website</a>
                 </div>
               </div>
             </div>
