--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ Krishnendu Roy
               <div class="left-text">
                 <h4>Kalyani Shikshayatan (H.S)</h4>
                 <p>
-                  Pellentesque habitant morbi tristique senectus et netus et
-                  malesuada fames ac turpis egestas. Vestibulum fermentum
-                  eleifend nibh, vitae sodales elit finibus pretium.
-                  Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                  semper.
+                  I have done my H.S from Kalyani Shikshayatan. 
+                  <br>
+                  Year(12th) &#8594; 2018-2020 
+                  <br>
+                  12th percentage &#8594; 80%
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="https://www.facebook.com/KalyaniShikshayatanofficials">Facebook Page</a>
                 </div>
               </div>
             </div>
@@ -142,7 +142,7 @@ Krishnendu Roy
           <div class="col-md-6">
             <div class="service-item">
               <div class="first-service-icon service-icon"></div>
-              <h4>HTML5 &amp; CSS3</h4>
+              <h4>HTML &amp; CSS</h4>
               <p>
                 Phasellus non convallis dolor. Integer tempor hendrerit arcu
                 at bibendum. Sed ac ante non metus vehicula congue quis eget
@@ -164,7 +164,7 @@ Krishnendu Roy
           <div class="col-md-6">
             <div class="service-item">
               <div class="third-service-icon service-icon"></div>
-              <h4>Problem Solving</h4>
+              <h4>Java &amp; JavaScript</h4>
               <p>
                 Integer suscipit condimentum aliquet. Nam quis risus metus.
                 Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
@@ -175,7 +175,7 @@ Krishnendu Roy
           <div class="col-md-6">
             <div class="service-item">
               <div class="fourth-service-icon service-icon"></div>
-              <h4>Admin Dashboard</h4>
+              <h4>Problem Solving</h4>
               <p>
                 Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
                 eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
