--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@ Krishnendu Roy
           <div class="social-network">
             <ul class="soial-icons">
               <li>
-                <a href="https://www.facebook.com/krishnendu.roy.501598/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/krishnendu.roy.501598/" target="_blank"><i
+                    class="fa fa-facebook"></i></a>
               </li>
               <li>
                 <a href="https://twitter.com/Krishne99697898" target="_blank"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/krishnendu-roy-577251168/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/krishnendu-roy-577251168/" target="_blank"><i
+                    class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/krishnendu_roy52/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/krishnendu_roy52/" target="_blank"><i
+                    class="fa fa-instagram"></i></a>
               </li>
               <!-- <li>
                 <a href="#"><i class="fa fa-rss"></i></a>
@@ -65,7 +68,7 @@ Krishnendu Roy
             </ul>
           </div>
           <div class="copyright-text">
-            <p>Copyright 2021 &copy; Krishnendu Roy</p>
+            <p>Copyright 2021 Krishnendu Roy &copy; <br>All rights reserved.</p>
           </div>
         </div>
       </div>
@@ -76,7 +79,8 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span>Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engnieering Student(2nd Year)<br>Here is EDUCATIONAL QUALIFICATION..</span>
+          <span>Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engnieering Student(2nd Year)<br>Here
+            is EDUCATIONAL QUALIFICATION..</span>
         </div>
         <div class="left-image-post">
           <div class="row">
@@ -91,7 +95,7 @@ Krishnendu Roy
                 <p>
                   B.tech 2nd Year Computer Science and Engnieering Student.
                   <br>
-                  Year &#8594; 2020 - 2024 
+                  Year &#8594; 2020 - 2024
                   <br>
                   current sgpa &#8594; 9.7
                 </p>
@@ -108,9 +112,9 @@ Krishnendu Roy
               <div class="left-text">
                 <h4>Kalyani Shikshayatan (H.S)</h4>
                 <p>
-                  I have done my H.S from Kalyani Shikshayatan. 
+                  I have done my H.S from Kalyani Shikshayatan.
                   <br>
-                  Year(12th) &#8594; 2018-2020 
+                  Year(12th) &#8594; 2018-2020
                   <br>
                   12th percentage &#8594; 80%
                 </p>
@@ -134,9 +138,9 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>What I’m good at?</h2>
           <div class="line-dec"></div>
-          <span>Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-            Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-            Nullam eu faucibus diam. Donec eget massa ante.</span>
+          <span>I love to read poems, Story books, novel also Singing, Drawing and Obiously Programming. I know some
+            Programming
+            languages like... </span>
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -144,9 +148,7 @@ Krishnendu Roy
               <div class="first-service-icon service-icon"></div>
               <h4>HTML &amp; CSS</h4>
               <p>
-                Phasellus non convallis dolor. Integer tempor hendrerit arcu
-                at bibendum. Sed ac ante non metus vehicula congue quis eget
-                eros.
+
               </p>
             </div>
           </div>
@@ -155,9 +157,7 @@ Krishnendu Roy
               <div class="second-service-icon service-icon"></div>
               <h4>Python &amp; C++</h4>
               <p>
-                Proin lacus massa, eleifend sed fermentum in, dignissim vel
-                metus. Nunc accumsan leo nec felis porttitor, ultricies
-                faucibus purus mollis.
+
               </p>
             </div>
           </div>
@@ -166,9 +166,7 @@ Krishnendu Roy
               <div class="third-service-icon service-icon"></div>
               <h4>Java &amp; JavaScript</h4>
               <p>
-                Integer suscipit condimentum aliquet. Nam quis risus metus.
-                Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                dui.
+
               </p>
             </div>
           </div>
@@ -177,9 +175,7 @@ Krishnendu Roy
               <div class="fourth-service-icon service-icon"></div>
               <h4>Problem Solving</h4>
               <p>
-                Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                leo nec felis porttitor.
+
               </p>
             </div>
           </div>
@@ -192,48 +188,48 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>My Work</h2>
           <div class="line-dec"></div>
-          <span>Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit
-            amet. Duis ac elit vulputate, lobortis arcu quis, vehicula
-            mauris.</span>
+          <span>I have done some project also My Extracurricular Activities</span>
         </div>
         <div class="row">
           <div class="isotope-wrapper">
             <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-              <label><input type="radio" data-type="people" name="isotope-filter" />
-                <span>people</span></label>
-              <label><input type="radio" data-type="nature" name="isotope-filter" />
-                <span>nature</span></label>
-              <label><input type="radio" data-type="animals" name="isotope-filter" />
-                <span>animals</span></label>
+              <label><input type="radio" data-type="project" name="isotope-filter" />
+                <span>Project</span></label>
+              <label><input type="radio" data-type="drawing" name="isotope-filter" />
+                <span>Drawing</span></label>
+              <label><input type="radio" data-type="videos" name="isotope-filter" />
+                <span>Video</span></label>
             </form>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="nature">
+              <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-01.jpg" alt="sq-sample26" />
+                  <img src="assets/images/website-codeherebro.jpg" alt="sq-sample26" />
                   <figcaption>
-                    <a href="assets/images/portfolio-01.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>First Title</h4>
-                    <span>free to use our template</span>
+                    <i class="fa fa-search"></i>
+                    <a href="https://codeherebro.herokuapp.com/" target="_blank">
+                      <h4>Coding Learning Website</h4>
+                      <span>Visit Now</span>
+                    </a>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="people">
+              <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-02.jpg" alt="sq-sample26" />
+                  <img src="assets/images/android-studio.png" alt="sq-sample26" />
                   <figcaption>
-                    <a href="assets/images/portfolio-02.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Second Title</h4>
-                    <span>please tell your friends</span>
+                    <i class="fa fa-search"></i>
+                    <a href="https://github.com/CodeHereBro/Tic-Tac-Toe" target="_blank">
+                      <h4>Tic-Tac-Toe Game</h4>
+                      <span>Visit Now</span>
+                    </a>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="animals">
+              <div class="isotope-item" data-type="videos">
                 <figure class="snip1321">
                   <img src="assets/images/portfolio-03.jpg" alt="sq-sample26" />
                   <figcaption>
@@ -245,19 +241,19 @@ Krishnendu Roy
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="people">
+              <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-04.jpg" alt="sq-sample26" />
+                  <img src="assets/images/virtual-assistant.jpg" alt="sq-sample26" />
                   <figcaption>
                     <a href="assets/images/portfolio-04.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search"></i></a>
-                    <h4>Item Fourth</h4>
-                    <span>Re-distribution not allowed</span>
+                    <h4>virtual Assistant using Python</h4>
+                    <span>Visit Now</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="nature">
+              <div class="isotope-item" data-type="drawing">
                 <figure class="snip1321">
                   <img src="assets/images/portfolio-05.jpg" alt="sq-sample26" />
                   <figcaption>
@@ -269,7 +265,7 @@ Krishnendu Roy
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="animals">
+              <div class="isotope-item" data-type="videos">
                 <figure class="snip1321">
                   <img src="assets/images/portfolio-06.jpg" alt="sq-sample26" />
                   <figcaption>
