--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Krishnendu Roy
             <div class="isotope-box">
               <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/website-codeherebro.jpg" alt="sq-sample26" />
+                  <img src="assets/images/website-codeherebro.jpg" alt="website project" />
                   <figcaption>
                     <i class="fa fa-search"></i>
                     <a href="https://codeherebro.herokuapp.com/" target="_blank">
@@ -218,7 +218,7 @@ Krishnendu Roy
 
               <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/android-studio.png" alt="sq-sample26" />
+                  <img src="assets/images/android-studio.png" alt="Tic-Tac-Toe Game" />
                   <figcaption>
                     <i class="fa fa-search"></i>
                     <a href="https://github.com/CodeHereBro/Tic-Tac-Toe" target="_blank">
@@ -243,9 +243,9 @@ Krishnendu Roy
 
               <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/virtual-assistant.jpg" alt="sq-sample26" />
+                  <img src="assets/images/virtual-assistant.jpg" alt="virtual-assistant" />
                   <figcaption>
-                    <a href="assets/images/portfolio-04.jpg" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/virtual-assistant.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search"></i></a>
                     <h4>virtual Assistant using Python</h4>
                     <span>Visit Now</span>
@@ -254,16 +254,56 @@ Krishnendu Roy
               </div>
 
               <div class="isotope-item" data-type="drawing">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-05.jpg" alt="sq-sample26" />
+                <figure class="d-drawing snip1321">
+                  <img src="assets/images/Krishnendu-ai.jpg" alt="digital painting" style="width: 305px;"/>
                   <figcaption>
-                    <a href="assets/images/portfolio-05.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Fifth Awesome</h4>
-                    <span>Ut sollicitudin risus</span>
+                    <a href="assets/images/Krishnendu-ai.jpg" data-lightbox="image-1" data-title="Krishnendu Roy"><i
+                        class="fa fa-search"></i>
+                    <h4>Digital Painting</h4>
+                    <span>Watch now</span>
+                  </a>
                   </figcaption>
                 </figure>
               </div>
+
+              <div class="isotope-item" data-type="drawing">
+                <figure class="d-drawing snip1321">
+                  <img src="assets/images/Shilpi-ai.jpg" alt="digital painting" style="width: 305px;"/>
+                  <figcaption>
+                    <a href="assets/images/Shilpi-ai.jpg" data-lightbox="image-1" data-title="Sister Shilpi Roy"><i
+                        class="fa fa-search"></i>
+                    <h4>Digital Painting</h4>
+                    <span>Watch Now</span>
+                  </a>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="drawing">
+                <figure class="d-drawing snip1321">
+                  <img src="assets/images/albert-einstein.jpg" alt="digital painting" style="width: 305px;"/>
+                  <figcaption>
+                    <a href="assets/images/albert-einstein.jpg" data-lightbox="image-1" data-title="albert einstein drawing"><i
+                        class="fa fa-search"></i>
+                    <h4>Drawing albert einstein</h4>
+                    <span>Watch Now</span>
+                  </a>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="isotope-item" data-type="drawing">
+                <figure class="d-drawing snip1321">
+                  <img src="assets/images/leo.jpg" alt="digital painting" style="width: 305px;"/>
+                  <figcaption>
+                    <a href="assets/images/leo.jpg" data-lightbox="image-1" data-title="Leonardo Da Vinci"><i
+                        class="fa fa-search"></i>
+                    <h4>Drawing Leonardo Da Vinci</h4>
+                    <span>Watch Now</span>
+                  </a>
+                  </figcaption>
+                </figure>
+              </div>
+              
 
               <div class="isotope-item" data-type="videos">
                 <figure class="snip1321">
