--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>My Work</h2>
           <div class="line-dec"></div>
-          <span>I have done some project also My Extracurricular Activities</span>
+          <span>I have done some project also some Extracurricular Activities</span>
         </div>
         <div class="row">
           <div class="isotope-wrapper">
@@ -334,7 +334,7 @@ Krishnendu Roy
         <div class="row">
           <div class="right-content">
             <div class="container">
-              <form id="contact" action="" method="post">
+              <form id="contact" action="email.php" method="post">
                 <div class="row">
                   <div class="col-md-6">
                     <fieldset>
