--- a/index.html
+++ b/index.html
@@ -344,9 +344,7 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
-          <span>Fusce eget nibh nec justo interdum condimentum. Morbi justo ex,
-            efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor
-            sit amet, consectetur adipiscing elit.</span>
+          <span>Send a short massage to krishnendu ROy</span>
         </div>
         <div class="row">
           <div class="right-content">
