--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Krishnendu Roy portfolio" />
   <meta name="author" content="krishnendu roy" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+  <link rel="shortcut icon" type="image/jpeg" href="assets/images/pic.jpeg">
 
   <title>Krishnendu Roy</title>
   <!--
@@ -344,7 +345,7 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
-          <span>Send a short massage to krishnendu ROy</span>
+          <span>Send a short massage to krishnendu Roy</span>
         </div>
         <div class="row">
           <div class="right-content">
