--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Krishnendu Roy
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
               <li><a href="#section1">About Me</a></li>
-              <li><a href="#section2">What I’m good at</a></li>
+              <li><a href="#section2">Skills</a></li>
               <li><a href="#section3">My Work</a></li>
               <li><a href="#section4">Contact Me</a></li>
             </ul>
@@ -132,12 +132,23 @@ Krishnendu Roy
           </div>
         </div>
       </div>
+      <div class="col-md">
+        <div class="service-item-resume">
+          <div class="second-service-icon service-icon"></div>
+          <h4>Resume &#8594;</h4>
+          <p>
+
+          </p>
+          <button class="resume">Visit Now</button>
+        </div>
+      </div>
     </section>
+    
 
     <section class="section my-services" data-section="section2">
       <div class="container">
         <div class="section-heading">
-          <h2>What I’m good at?</h2>
+          <h2>Skills</h2>
           <div class="line-dec"></div>
           <span>I love to read poems, Story books, novel also Singing, Drawing and Obiously Programming. I know some
             Programming
@@ -305,7 +316,7 @@ Krishnendu Roy
                 </figure>
               </div>
 
-              
+
               <div class="isotope-item" data-type="videos">
                 <div class="video">
                   <iframe src="https://www.youtube.com/embed/OngI56_maxk" title="YouTube video player" frameborder="0"
