--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Krishnendu Roy
           <p>
 
           </p>
-          <button class="resume">Visit Now</button>
+          <button class="resume"><a href="https://docs.google.com/document/d/1jK11XKKyDuGZlzRNtU0zIdO0_v6yI9Gg8uhhrjFXU-Y/edit?usp=sharing" target="_blank">Visit Now</a></button>
         </div>
       </div>
     </section>
