--- a/index.html
+++ b/index.html
@@ -139,11 +139,13 @@ Krishnendu Roy
           <p>
 
           </p>
-          <button class="resume"><a href="https://docs.google.com/document/d/1jK11XKKyDuGZlzRNtU0zIdO0_v6yI9Gg8uhhrjFXU-Y/edit?usp=sharing" target="_blank">Visit Now</a></button>
+          <button class="resume"><a
+              href="https://docs.google.com/document/d/1jK11XKKyDuGZlzRNtU0zIdO0_v6yI9Gg8uhhrjFXU-Y/edit?usp=sharing"
+              target="_blank">Visit Now</a></button>
         </div>
       </div>
     </section>
-    
+
 
     <section class="section my-services" data-section="section2">
       <div class="container">
@@ -216,28 +218,31 @@ Krishnendu Roy
             </form>
             <div class="isotope-box">
               <div class="isotope-item" data-type="project">
+                <a href="https://codeherebro.herokuapp.com/" target="_blank">
                 <figure class="snip1321">
                   <img src="assets/images/website-codeherebro.jpg" alt="website project" />
                   <figcaption>
                     <i class="fa fa-search"></i>
-                    <a href="https://codeherebro.herokuapp.com/" target="_blank">
-                      <h4>Coding Learning Website</h4>
-                      <span>Visit Now</span>
-                    </a>
+
+                    <h4>Coding Learning Website</h4>
+                    <span>Visit Now</span>
+
                   </figcaption>
                 </figure>
+                </a>
               </div>
 
               <div class="isotope-item" data-type="project">
-                <figure class="snip1321">
-                  <img src="assets/images/virtual-assistant.jpg" alt="virtual-assistant" />
-                  <figcaption>
-                    <a href="assets/images/virtual-assistant.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>virtual Assistant using Python</h4>
-                    <span>Visit Now</span>
-                  </figcaption>
-                </figure>
+                <a href="https://github.com/CodeHereBro/Doraemon" target="_blank">
+                  <figure class="snip1321">
+                    <img src="assets/images/doraemon.jpg" alt="doraemon python" />
+                    <figcaption>
+                      <i class="fa fa-search"></i>
+                      <h4>Draw doremon using python</h4>
+                      <span>Visit Now</span>
+                    </figcaption>
+                  </figure>
+                </a>
               </div>
 
               <div class="isotope-item" data-type="project">
