--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ Krishnendu Roy
                   <br>
                   Year &#8594; 2020 - 2024
                   <br>
-                  current sgpa &#8594; 9.7
+                  1st Semester sgpa &#8594; 9.7<br>
+                  2nd Semester Sgpa &#8594; 9.56<br>
+                  <span style="color: aqua; font-family: serif;">YGPA</span> &#8594; 9.66
                 </p>
                 <div class="white-button">
                   <a href="https://msit.edu.in/" target="_blank">College Website</a>
