--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@ Krishnendu Roy
                   <br>
                   Year &#8594; 2020 - 2024
                   <br>
-                  1st Semester sgpa &#8594; 9.7<br>
-                  2nd Semester Sgpa &#8594; 9.56<br>
-                  <span style="color: aqua; font-family: serif;">YGPA</span> &#8594; 9.66
+                  <span style="font-weight: 700;">For more information check out my <a href="https://docs.google.com/document/d/1jK11XKKyDuGZlzRNtU0zIdO0_v6yI9Gg8uhhrjFXU-Y/edit?usp=sharing" target="_blank"><span style="font-weight: 900; color: aqua;">RESUME</span></a></span>
                 </p>
                 <div class="white-button">
                   <a href="https://msit.edu.in/" target="_blank">College Website</a>
@@ -219,7 +217,7 @@ Krishnendu Roy
                 <span>Video</span></label>
             </form>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="project">
+              <!-- <div class="isotope-item" data-type="project">
                 <a href="https://codeherebro.herokuapp.com/" target="_blank">
                 <figure class="snip1321">
                   <img src="assets/images/website-codeherebro.jpg" alt="website project" />
@@ -232,6 +230,20 @@ Krishnendu Roy
                   </figcaption>
                 </figure>
                 </a>
+              </div> -->
+              <div class="isotope-item" data-type="project">
+                <figure class="snip1321">
+                  <img src="assets/images/Weather-Api.jpg" alt="Weather-forcast Website" />
+                  <a href="https://weatherdakho.netlify.app" target="_blank">
+                  <figcaption>
+                    <i class="fa fa-search"></i>
+                    
+                      <h4>Weather-Forecast Website</h4>
+                      <span>Visit Now</span>
+                    
+                  </figcaption>
+                </a>
+                </figure>
               </div>
 
               <div class="isotope-item" data-type="project">
