--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Krishnendu Roy
         <div class="section-heading">
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span>Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engnieering Student(2nd Year)<br>Here
+          <span>Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engineering Student(2nd Year)<br>Here
             is EDUCATIONAL QUALIFICATION..</span>
         </div>
         <div class="left-image-post">
