Youtube icon add

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Krishnendu Roy portfolio" />
+  <meta name="keywords" content="krishnendu, krishnendu roy, krishnendu msit, krishnendu youtuber, linkedin, raj roy, who is krishnendu, about krishnendu, krishnendu kalyani">
   <meta name="author" content="krishnendu roy" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
   <link rel="shortcut icon" type="image/jpeg" href="assets/images/pic.jpeg">
 
   <title>Krishnendu Roy</title>
   <!--
-Krishnendu Roy
--->
+    Krishnendu Roy
+  -->
   <!-- Bootstrap CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -63,9 +64,9 @@ Krishnendu Roy
                 <a href="https://www.instagram.com/krishnendu_roy52/" target="_blank"><i
                     class="fa fa-instagram"></i></a>
               </li>
-              <!-- <li>
-                <a href="#"><i class="fa fa-rss"></i></a>
-              </li> -->
+              <li>
+                <a href="https://www.youtube.com/c/KrishnenduRoy52"><i class="fa fa-youtube"></i></a>
+              </li>
             </ul>
           </div>
           <div class="copyright-text">
