--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <i class="fa fa-times" id="menu-close"></i>
         <div class="container">
           <div class="image">
-            <a href="#"><img src="assets/images/pic.jpeg" alt="Pofile pic" /></a>
+            <a href="#"><img src="assets/images/pic2.jpeg" alt="Pofile pic" /></a>
           </div>
           <div class="author-content">
             <h4><strong>Krishnendu Roy</strong></h4>
@@ -84,10 +84,11 @@
             <h1 class="hello display-3">HELLO!
               <code>I'm Krishnendu</code>
             </h1>
+            <div class="line-dec"></div>
             <h1 class="lead display-4">
               I
               <span class="txt-rotate" data-period="2000"
-                data-rotate='[ "am Full-Stack Developer. ", " am Youtber ", " am working on Problem Solving ", " am a learner for life! " ]'>
+                data-rotate='[ "am Full-Stack Developer. ", " am Youtber ", " am working on Problem Solving ", " am prepared for the worst, but hope for the best. " ]'>
               </span>
             </h1>
           </div>
