project section update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          
+
           <p>
             <!-- Hello! I'm <strong>Krishnendu Roy</strong>, Computer Science and Engineering Student(2nd Year)<br>Here
             is EDUCATIONAL QUALIFICATION.. -->
@@ -249,70 +249,73 @@
                 <span>Video</span></label>
             </form>
             <div class="isotope-box">
-              <!-- <div class="isotope-item" data-type="project">
-                <a href="https://codeherebro.herokuapp.com/" target="_blank">
-                <figure class="snip1321">
-                  <img src="assets/images/website-codeherebro.jpg" alt="website project" />
-                  <figcaption>
-                    <i class="fa fa-search"></i>
-
-                    <h4>Coding Learning Website</h4>
-                    <span>Visit Now</span>
-
-                  </figcaption>
-                </figure>
-                </a>
-              </div> -->
               <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
-                  <img src="assets/images/Weather-Api.jpg" alt="Weather-forcast Website" />
-                  <a href="https://weatherdakho.netlify.app" target="_blank">
-                    <figcaption>
-                      <i class="fa fa-search"></i>
+                  <img src="assets/images/Weather-Api.png" alt="Weather-forcast Website" />
 
-                      <h4>Weather-Forecast Website</h4>
-                      <span>Visit Now</span>
+                  <figcaption>
+                    <a href="https://weatherdakho.netlify.app" target="_blank">
+                      <i class="fa fa-eye"></i>
+                    </a>
+                    <a href="https://github.com/krishnenduroy52/weather-forecast" target="_blank">
+                      <i class="fa fa-github"></i>
+                    </a>
+                    <h4>Weather-Forecast Website</h4>
+                    <span>See weather forecast before hand. Build using Vanilla js and Weather API</span>
+                  </figcaption>
 
-                    </figcaption>
-                  </a>
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="project">
-                <a href="https://github.com/CodeHereBro/Doraemon" target="_blank">
-                  <figure class="snip1321">
-                    <img src="assets/images/doraemon.jpg" alt="doraemon python" />
-                    <figcaption>
-                      <i class="fa fa-search"></i>
-                      <h4>Draw doremon using python</h4>
-                      <span>Visit Now</span>
-                    </figcaption>
-                  </figure>
+
+                <figure class="snip1321">
+                  <img src="assets/images/isharing.png" alt="doraemon python" />
+                  <figcaption>
+                    <a href="https://isharing.herokuapp.com/" target="_blank">
+                      <i class="fa fa-eye"></i>
+                    </a>
+                    <a href="https://github.com/krishnenduroy52/instant-share-demo" target="_blank">
+                      <i class="fa fa-github"></i>
+                    </a>
+                    <h4>Share Your File Instantly</h4>
+                    <span>PC to PC file sharing is difficult, but Using this you can share files easily. Build using
+                      SOCKET.IO</span>
+                  </figcaption>
+                </figure>
                 </a>
               </div>
 
               <div class="isotope-item" data-type="project">
+
                 <figure class="snip1321">
-                  <img src="assets/images/virtual-assistant.jpg" alt="virtual-assistant" />
+                  <img src="assets/images/musicplayer.png" alt="doraemon python" />
                   <figcaption>
-                    <a href="assets/images/virtual-assistant.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>virtual Assistant using Python</h4>
-                    <span>Visit Now</span>
+                    <a href="https://www.youtube.com/watch?v=vZopyJVofXo" target="_blank">
+                      <i class="fa fa-eye"></i>
+                    </a>
+                    <a href="https://github.com/krishnenduroy52/Doraemon" target="_blank">
+                      <i class="fa fa-github"></i>
+                    </a>
+                    <h4>Music Player Using</h4>
+                    <span>Build using vanilla js</span>
                   </figcaption>
                 </figure>
+                </a>
               </div>
 
               <div class="isotope-item" data-type="project">
                 <figure class="snip1321">
                   <img src="assets/images/android-studio.png" alt="Tic-Tac-Toe Game" />
-                  <figcaption>
-                    <i class="fa fa-search"></i>
-                    <a href="https://github.com/CodeHereBro/Tic-Tac-Toe" target="_blank">
+                  <a href="https://github.com/CodeHereBro/Tic-Tac-Toe" target="_blank">
+                    <figcaption>
+                      <i class="fa fa-search"></i>
+
                       <h4>Tic-Tac-Toe Game</h4>
                       <span>Visit Now</span>
-                    </a>
-                  </figcaption>
+
+                    </figcaption>
+                  </a>
                 </figure>
               </div>
 
